# c-srv

./: AUTHORS  CMakeLists.txt  INSTALL  LICENSE  Makefile  README  qhttpsrv.pc  qhttpsrv.pc~
examples/: CMakeLists.txt
examples/chatserver/: CMakeLists.txt  apihandler.h
include/: QLocateHandler  QLuceneHandler  qfilesystemhandler.h  qfilesystemhandler_p.h  qhttpengine.h  qhttphandler.h  qhttphandler_p.h  qhttpserver.h  qhttpserver_p.h  qhttpsocket.h  qhttpsocket_p.h  qiodevicecopier_p.h  qlocatehandler.h  qtemporarydir.h
include/qhttpsrv/: projectname.h  version.h
src/: CMakeLists.txt  libraryinfo.h  libraryinfo.h.in.cmake  qfilesystemhandler.cpp  qhttphandler.cpp  qhttpparser.cpp  qhttpserver.cpp  qhttpsocket.cpp  qiodevicecopier.cpp  qlocalfile.cpp  qlocatehandler.cpp  qobjecthandler.cpp  qtemporarydir.cpp  version.cpp
tests/: CMakeLists.txt  TestQFilesystemHandler.cpp
tests/common/: CMakeLists.txt
